= Changelog
:toc: macro
:project-url: https://github.com/sorairolake/sysexits-rs
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

toc::[]

== {compare-url}/v0.3.0\...v0.3.1[0.3.1] - 2022-09-06

=== Removed

* Remove `repr(u8)` from `ExitCode`

== {compare-url}/v0.2.2\...v0.3.0[0.3.0] - 2022-06-10

=== Added

* Implement `Display` trait and corresponding test ({pull-request-url}/1[#1])
* Add the example that returns `sysexits::ExitCode`

== {compare-url}/v0.2.1\...v0.2.2[0.2.2] - 2022-06-04

=== Added

* Add the `inline` attribute

== {compare-url}/v0.2.0\...v0.2.1[0.2.1] - 2022-05-31

=== Added

* Add code example to README

=== Changed

* Update documentation examples inside the crate root file

== {compare-url}/v0.1.1\...v0.2.0[0.2.0] - 2022-05-30

=== Changed

* Rename `sysexits::SysExits` to `sysexits::ExitCode`

== {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2022-05-30

=== Added

* Add doctest to each variant of `SysExits`
* Add section about usage to README

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2022-05-28

=== Added

* Initial release