@@ -12,6 +12,12 @@ project adheres to https://semver.org/[Semantic Versioning].
 
 toc::[]
 
+== {compare-url}/v0.3.1\...HEAD[Unreleased]
+
+=== Added
+
+* Add lint attributes to examples
+
 == {compare-url}/v0.3.0\...v0.3.1[0.3.1] - 2022-09-06
 
 === Removed
